# aula08_bootcamp

./: README.md  etl.py  pipeline.py  pyproject.toml  teste_etl.py
data/: coleta_dia02.json  coleta_dia03.json
