[tool.poetry]
name = "aula08"
version = "0.1.0"
description = ""
authors = ["Guilherme Akira <akira.enoki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandera = "^0.18.3"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
